crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__does_not_ignore_non_trailing_sub_character.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
ab

syntax:
syntax:
CompilationUnit
  ImportDeclarationList
  CompilationUnitDeclarationList
    FieldDeclaration
      ClassType
        ClassTypeSegmentList
          ClassTypeSegmentNode
            AnnotationList
            Name
              Identifier "a\u{1a}b" @ 0..3
      VariableDeclaratorList
        VariableDeclarator
  Eof "" @ 3..3

diagnostics:
  code=java.parse.expected_syntax severity=Error stage=Parser range=3..3 message="expected variable name"
  code=java.parse.expected_syntax severity=Error stage=Parser range=3..3 message="expected `;` after field declaration"

diagnostics:
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(3), end: TextSize(3) }) message=expected variable name
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(3), end: TextSize(3) }) message=expected `;` after field declaration
