crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__escaped_quote_prevents_text_block_closing_delimiter.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
"""
\"""
"""

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
    BogusCompilationUnitItem
      TextBlockLiteral "\"\"\"\n\\\"\"\"\n\"\"\"" @ 0..12
  Eof "" @ 12..12

diagnostics:
  code=java.parse.unexpected_syntax severity=Error stage=Parser range=0..12 message="unexpected token at top level"

diagnostics:
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(0), end: TextSize(12) }) message=unexpected token at top level
