crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__ignores_trailing_sub_after_unicode_escape_translation.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
class A {}\u001a

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
    ClassDeclaration
      ClassKw "class" @ 0..5 trailing=[Whitespace " "]
      Identifier "A" @ 6..7 trailing=[Whitespace " "]
      ClassBody
        LBrace "{" @ 8..9
        ClassBodyMemberList
        RBrace "}" @ 9..10
  Eof "" @ 16..16 leading=[TrailingSubstitute "\\u001a"]

diagnostics:
  (none)

diagnostics:
(none)
