crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__ignores_trailing_sub_character.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
class A {}

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
    ClassDeclaration
      ClassKw "class" @ 0..5 trailing=[Whitespace " "]
      Identifier "A" @ 6..7 trailing=[Whitespace " "]
      ClassBody
        LBrace "{" @ 8..9
        ClassBodyMemberList
        RBrace "}" @ 9..10
  Eof "" @ 11..11 leading=[TrailingSubstitute "\u{1a}"]

diagnostics:
  (none)

diagnostics:
(none)
