crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__keeps_crlf_as_one_line_terminator_trivia.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
a
b

syntax:
syntax:
CompilationUnit
  ImportDeclarationList
  CompilationUnitDeclarationList
    FieldDeclaration
      ClassType
        ClassTypeSegmentList
          ClassTypeSegmentNode
            AnnotationList
            Name
              Identifier "a" @ 0..1
      VariableDeclaratorList
        VariableDeclarator
          Identifier "b" @ 3..4 leading=[Newline "\r\n"]
  Eof "" @ 4..4

diagnostics:
  code=java.parse.expected_syntax severity=Error stage=Parser range=4..4 message="expected `;` after field declaration"

diagnostics:
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(4), end: TextSize(4) }) message=expected `;` after field declaration
