crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__line_comments_can_end_at_eof.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
int a; // eof comment

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
    FieldDeclaration
      PrimitiveType
        AnnotationList
        IntKw "int" @ 0..3 trailing=[Whitespace " "]
      VariableDeclaratorList
        VariableDeclarator
          Identifier "a" @ 4..5
      Semicolon ";" @ 5..6 trailing=[Whitespace " ", LineComment "// eof comment"]
  Eof "" @ 21..21

diagnostics:
  (none)

diagnostics:
(none)
