crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__line_comments_ignore_block_comment_markers.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
int a; // /* not a block */
int b;

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
    FieldDeclaration
      PrimitiveType
        AnnotationList
        IntKw "int" @ 0..3 trailing=[Whitespace " "]
      VariableDeclaratorList
        VariableDeclarator
          Identifier "a" @ 4..5
      Semicolon ";" @ 5..6 trailing=[Whitespace " ", LineComment "// /* not a block */"]
    FieldDeclaration
      PrimitiveType
        AnnotationList
        IntKw "int" @ 28..31 leading=[Newline "\n"] trailing=[Whitespace " "]
      VariableDeclaratorList
        VariableDeclarator
          Identifier "b" @ 32..33
      Semicolon ";" @ 33..34
  Eof "" @ 34..34

diagnostics:
  (none)

diagnostics:
(none)
